--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Javascript Clock</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reloj en JavaScript</title>
     <link rel="stylesheet" href="styles.css">
+    </style>
 </head>
 <body>
-    <div class="clock">
-        <div id="hours">00</div>:<div id="minutes">00</div>:<div id="seconds">00</div>
-    </div>
+    <div id="clock">00:00:00</div>
     <script src="scripts.js"></script>
 </body>
 </html>
